DEFECT FIX: On mainPage on taskItem taskAction area if clicked label to mark taskItem complete (vs checkbox) it wasn't working properly...FIX: had to remove wrapping <a> tag and place onclick method call directly on checkbox <input> tag and had to create CSS to enable appropriate hover effects.

--- a/css/style.css
+++ b/css/style.css
@@ -724,6 +724,16 @@ nav ul li:hover ul li span.listTotal {
 	.taskActionRowCompletCheckbox {
 		text-align: center;
 	}
+	.taskActionCompleteLabel {
+		color: #2cb5a3;
+    	cursor: pointer;
+	}	
+
+	.taskActionCompleteLabel:hover {
+		color: #2cb5a3;
+    	cursor: pointer;
+		color: #2C9893;
+	}	
 	
 	.checkBoxLabel {
 		float: right;
